gcc/testsuite/rust/rustc/ui/issues/issue-4736.rs
struct NonCopyable(());

fn main() {
    let z = NonCopyable{ p: () }; // { dg-error ".E0560." "" { target *-*-* } }
}

